--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
 @import url(./blocks/page/page.css);
 @import url(./blocks/page/__container/page__container.css);
 
+@import url(./blocks/register/register.css);
+@import url(./blocks/register/__form/register__form.css);
+@import url(./blocks/register/__input/register__input.css);
+@import url(./blocks/register/__submit/register__submit.css);
+@import url(./blocks/register/__title/register__title.css);
+@import url(./blocks/register/__text/register__text.css);
+
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_open/popup_open.css);
 @import url(./blocks/popup/__container/popup__container.css);
