--- a/src/blocks/auth/__form/auth__form.css
+++ b/src/blocks/auth/__form/auth__form.css
@@ -1,16 +1,17 @@
-.register__form {
-    /* max-width: 358px; */
-    margin: 34px auto 0;
+.auth__form {
+    width: 358px;
+    height: 70vh;
+    margin: 0;
     background-color: #fff;
     display: flex;
     flex-direction: column;
     background-color: #000;
+    justify-content: space-between;
   }
   
   @media screen and (max-width: 582px) {
-    .register__form {
-      width: 238px;
-      margin-bottom: 25px;
+    .auth__form {
+      width: 260px;
     }
   }
   
