--- a/src/blocks/auth/__submit/auth__submit.css
+++ b/src/blocks/auth/__submit/auth__submit.css
@@ -1,8 +1,7 @@
-.register__submit {
+.auth__submit {
     width: 100%;
     height: 50px;
     cursor: pointer;
-    /* margin-bottom: 36px; */
     font-size: 18px;
     line-height: 22px;
     font-weight: 400;
@@ -13,14 +12,15 @@
     background-color: #fff;
     transition: 0.3s;
   }
-  .register__submit:hover {
+  .auth__submit:hover {
     opacity: 0.8;
   }
   
   @media screen and (max-width: 582px) {
-    .register__submit {
-      font-size: 14px;
-      line-height: 17px;
+    .auth__submit {
+      font-size: 16px;
+      line-height: 19px;
+      height: 46px;
     }
   }
   
