--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,8 @@
 .header {
   width: 100%;
   max-width: 880px;
+  display: flex;
+  justify-content: space-between;
   margin: 0 auto 40px;
   padding: 0;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
