--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 @import url(./blocks/auth/__input/auth__input.css);
 @import url(./blocks/auth/__submit/auth__submit.css);
 @import url(./blocks/auth/__text/auth__text.css);
+@import url(./blocks/auth/__links/auth__links.css);
 @import url(./blocks/auth/__title/auth__title.css);
 @import url(./blocks/popup/__container/popup__container-info.css);
 @import url(./blocks/popup/__info-text/popup__info-text.css);
@@ -30,6 +31,7 @@
 @import url(./blocks/popup/__image-description/popup__image-description.css);
 
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__links/header__links.css);
 @import url(./blocks/logo/logo.css);
 
 @import url(./blocks/profile/profile.css);
